@@ -11,7 +11,7 @@ else
     t_tag_spec.push('NOEXEC')
 end
 
-if ['RedHat','CentOS'].include?(@facts['operatingsystem'])
+if ['RedHat'].include?(@facts['osfamily'])
   if @setenv
     t_tag_spec.push('SETENV')
   else
